--- a/index.Rmd
+++ b/index.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Have you noticed that tasks always take longer than you think they will? Well, if you have, you’re in good company, because according to research, that’s what happens to literally everybody, literally all the time. From popping to the shops to get some milk, to massive transnational infrastructure projects, wherever a human being is called upon to estimate how long it’ll take them to do something, you’ll find the “planning fallacy”; the tendency to underestimate how long a task will take.
 
-![](/03_figures/Blog%20meme.png)
+![](03_figures/Blog%20meme.png)
 
 The weird thing about the planning fallacy is that we all have a lot of experience of being wrong about our estimates, but keep being wrong next time anyway. As a species our temporal over-optimism has been refuted continually for millennia; you’d think we would have gotten better at this by now. Why is the planning fallacy so tenacious, and how many times can we be wrong until we learn our lesson and start making better estimates?
 
@@ -71,7 +71,7 @@ As noted, this dataset covered a span of almost ten years of work days. It consi
 The first surprise was that there was no overall tendency towards the planning fallacy; on average, task durations were overestimated, not underestimated. The planning fallacy was observed, but, running counter to prior research, only for very short - single pomodoro - tasks, and only to a very small degree on average. In another flagrant insult to our very reasonable and well-justified predictions, with longer task lengths, overestimation actually increased. It was almost as though Borgatti hadn’t familiarised himself with the relevant psychological research and didn’t know what his brain was supposed to be doing.
 
 
-![Figure 1. Degree of estimation bias, using the log difference measure, over increasing task length estimates, with confidence intervals (1.96 times Standard Error). Values above 0 indicate overestimation, and below 0 indicate underestimation.](/03_figures/bias%20over%20estimate%20-%20all.png)
+![Figure 1. Degree of estimation bias, using the log difference measure, over increasing task length estimates, with confidence intervals (1.96 times Standard Error). Values above 0 indicate overestimation, and below 0 indicate underestimation.](03_figures/bias%20over%20estimate%20-%20all.png)
 
 As for the next prediction; whether repeated experience with a specific task led to increased estimation accuracy, the answer was yes! The more Borgatti had completed a task in the past, the better his estimations were. We explored the time horizon for this effect and found that the relationship between total task experience and accuracy increased for up to 5.5 months prior, beyond which the effect began to decrease. 
 
