--- a/index.Rmd
+++ b/index.Rmd
@@ -47,7 +47,7 @@ Ironically, because the planning fallacy is caused by this inside view, interven
 
 Also in accordance with this explanation, a greater duration and/or complexity of a task also exacerbates the effect of the planning fallacy. This is a well-replicated result across many task types and time scales, and makes sense; the longer the timescale and the more moving parts a project relies on, the higher the potential for unanticipated disruptions.
 
-The planning fallacy is surprisingly ubiquitous. It seems to be independent of culture, personality traits, and tendency to procrastinate (people who procrastinate more correctly predict that tasks will take them longer than those who do not procrastinate, but both groups are over-optimistic (Pychyl et al., 2000). It is also not associated with mood or confidence, and not modified in experiments by inducing demand characteristics. Though there is some evidence - not fortuitously for most organisations - that it is intensified in people with power.
+The planning fallacy is surprisingly ubiquitous. It seems to be independent of culture, personality traits, and tendency to procrastinate (procrastinators correctly predict that tasks will take them longer than those who do not procrastinate, but both groups are over-optimistic; Pychyl et al., 2000). It is also not associated with mood or confidence, and not modified in experiments by inducing demand characteristics. Though there is some evidence - not fortuitously for most organisations - that it is intensified in people with power.
 
 There was some evidence that feedback helps to reduce the planning fallacy - at least for similar tasks - but studies which have tested this have only used feedback over very short timescales with very few instances of feedback (e.g. Cornelius et al., 2015; Roy et al., 2008).
 
